Implement auth service server
